# study_structure_tsuji_lab

./: README.md
study-main/: .gitignore  POSCAR  README.md  pyproject.toml
study-main/high-entropy-oxide/perovskite-CaSrBaLaPb1_Ti1_O3/calc/conditions/: INCAR  POTCAR
study-main/high-entropy-oxide/perovskite-CaSrBaLaPb1_Ti1_O3/scripts/generate-poscars/: MM_POSCAR.sh  count_perovskite_distance.py  count_perovskite_vector.py  generate_base_perovskite_poscar_1.py  generator_perovskite_poscar.py
study-main/high-entropy-oxide/perovskite-CaSrBaLaPb1_Ti1_O3/scripts/run_dir/: exe.py
study-main/high-entropy-oxide/perovskite-CaSrBaLaPb1_Ti1_O3/structures/: README.md
study-main/high-entropy-oxide/perovskite_test/calc/conditions/: INCAR
study-main/high-entropy-oxide/perovskite_test/scripts/generate-poscars/: test_poscar_generate.py
study-main/high-entropy-oxide/perovskite_test/scripts/run_dir/: exe.py
study-main/high-entropy-oxide/rocksalt-NiMgCuCoZnO/discussions/: analytics.xlsx
study-main/high-entropy-oxide/rocksalt-NiMgCuCoZnO/discussions/bo/: index.ipynb  (+1 more)
study-main/high-entropy-oxide/share/: .env.example  HEO_default.sh  HEO_test.sh  bayes_opt.py  connect_ssh.py  job_command.py  share.py
study-main/high-entropy-oxide/spinel_test/calc/: data.csv
study-main/study-main/: .env.example  .gitignore  README.md
study-main/ueno/high-entropy-oxide/pervoskite/: README.md  Sr2Nb2O7.vasp  generate_nacl_poscar.py  pervoskite1.py  pyproject.toml  random2.py
study-main/ueno/high-entropy-oxide/spinel/: count.py  data.csv  ex.ipynb  high_entropy_oxide_generator_eq.ipynb
(+169 files in other folders)
